--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Magneto", sans-serif;
   background: #FFFFFF;
   color: #fff;
 }
@@ -119,10 +119,10 @@ h1, h2, h3, h4, h5, h6 {
 # Top Bar
 --------------------------------------------------------------*/
 #topbar {
-  height: 40px;
-  font-size: 14px;
+  height: 50px;
+  font-size: 15px;
   transition: all 0.5s;
-  z-index: 996;
+  z-index: 996;	
 }
 #topbar.topbar-scrolled {
   top: -40px;
@@ -132,8 +132,8 @@ h1, h2, h3, h4, h5, h6 {
   color: #d9ba85;
 }
 #topbar .contact-info i span {
-  padding-left: 5px;
-  color: #fff;
+  padding-left: 10px;
+  color: #cda45e;
 }
 #topbar .languages ul {
   display: flex;
@@ -147,11 +147,11 @@ h1, h2, h3, h4, h5, h6 {
   color: white;
 }
 #topbar .languages ul li + li {
-  padding-left: 10px;
+  padding-left: 100px;
 }
 #topbar .languages ul li + li::before {
   display: inline-block;
-  padding-right: 10px;
+  padding-right: 25px;
   color: rgba(255, 255, 255, 0.5);
   content: "/";
 }
@@ -160,8 +160,8 @@ h1, h2, h3, h4, h5, h6 {
 # Header
 --------------------------------------------------------------*/
 #header {
-  background: rgba(12, 11, 9, 0.6);
-  border-bottom: 1px solid rgba(12, 11, 9, 0.6);
+  /*background: rgba(12, 11, 9, 0.6);
+  border-bottom: 1px solid rgba(12, 11, 9, 0.6);*/
   transition: all 0.5s;
   z-index: 997;
   padding: 15px 0;
@@ -173,14 +173,14 @@ h1, h2, h3, h4, h5, h6 {
   border-bottom: 1px solid #37332a;
 }
 #header .logo {
-  font-size: 28px;
+  font-size: 48px;
   margin: 0;
   padding: 0;
   line-height: 1;
   font-weight: 300;
   letter-spacing: 1px;
   text-transform: uppercase;
-  font-family: "Poppins", sans-serif;
+  font-family:  "Poppins", sans-serif;
 }
 #header .logo a {
   color: #fff;
@@ -398,9 +398,9 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
-  background-size: cover;
+  height: 120vh;
+  background: url("../img/hero-bg.jpg") center;
+  background-size: fit;
   position: relative;
   padding: 0;
 }
@@ -731,6 +731,7 @@ section {
 .about .content h3 {
   font-weight: 600;
   font-size: 26px;
+
 }
 .about .content ul {
   list-style: none;
@@ -1403,7 +1404,7 @@ section {
   padding: 2px 0 2px 0;
   line-height: 1;
   font-weight: 300;
-  text-transform: uppercase;
+  text-transform: ;
   font-family: "Poppins", sans-serif;
 }
 #footer .footer-top .footer-info p {
