--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body {
   font-family: "Magneto", sans-serif;
   background: #FFFFFF;
   color: #fff;
+  font-size:25px;
 }
 
 a {
@@ -25,7 +26,8 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Playfair Display", serif;
+  font-family: "Poppins", sans-serif;
+
 }
 
 /*--------------------------------------------------------------
@@ -741,7 +743,7 @@ section {
   padding-bottom: 10px;
 }
 .about .content ul i {
-  font-size: 20px;
+  font-size: 25px;
   padding-right: 4px;
   color: #cda45e;
 }
@@ -1512,4 +1514,62 @@ section {
   text-align: center;
   font-size: 13px;
   color: #fff;
+}
+@media (max-width: 56px) {
+  #contact #google-map {
+    margin-top: 20px;
+  }
+}
+
+.callout {
+  position: absolute;
+  bottom: 25px;
+  top:200px;
+  right: 10px;
+  left:650px;
+  margin-left: 20px;
+  max-width: 500px;
+  opacity:100;
+  z-index:100;
+  size:900px;
+}
+
+.callout-header {
+  padding: 25px 15px;
+  background: #555;
+  font-size: 30px;
+  color: white;
+  opacity:100;
+}
+
+.callout-container {
+  padding: 0px;
+  background-color: #ccc;
+  color: black;
+  opacity:100
+}
+
+.closebtn {
+  position: absolute;
+  top: 5px;
+  right: 15px;
+  color: white;
+  font-size: 30px;
+  cursor: pointer;
+}
+
+.closebtn:hover {
+  color: lightgrey;
+}
+
+.d-flex{
+	 padding: 10px 8px;
+    text-decoration: none;
+    display: inline-block;
+    color: #555;
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 15px;
+    outline: none;
+	
 }
